WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279375
REGRESSION (
283076@main
): [ Sonoma wk2 x86_64 ] fast/forms/input-implicit-length-limit.html is a constant timeout.
https://bugs.webkit.org/show_bug.cgi?id=279375
Summary
REGRESSION (283076@main): [ Sonoma wk2 x86_64 ] fast/forms/input-implicit-len...
Anfernee Viduya
Reported
2024-09-09 12:07:47 PDT
fast/forms/input-implicit-length-limit.html is a flaky failure. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Finput-implicit-length-limit.html&version_name=Sonoma&flavor=wk2&flavor=wk1&architecture=x86&architecture=x86_64
LOG: No Log provided. LINK:
https://build.webkit.org/results/Apple-Sonoma-Release-WK2-Tests/283340@main%20(4494)/results.html
# REPRODUCIBILITY: I was able to bisect the regression on
283276@main
using command $ run-webkit-tests fast/forms/input-implicit-length-limit.html --debug --iterations=100 DESCRIPTION: On the debug configuration the timeout is constant and release configuration is a flaky timeout.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-09 12:07:57 PDT
<
rdar://problem/135569016
>
Anfernee Viduya
Comment 2
2024-09-09 13:27:43 PDT
Correction:
> > REPRODUCIBILITY: > I was able to bisect the regression on
283076@main
using command > $ run-webkit-tests fast/forms/input-implicit-length-limit.html --debug > --iterations=100
>
Chris Dumez
Comment 3
2024-09-09 20:39:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33365
EWS
Comment 4
2024-09-09 21:57:15 PDT
Committed
283393@main
(903140e7b64b): <
https://commits.webkit.org/283393@main
> Reviewed commits have been landed. Closing PR #33365 and removing active labels.
EWS
Comment 5
2024-09-11 13:55:28 PDT
Committed
283286.10@safari-7620-branch
(afc2ebcfb47c): <
https://commits.webkit.org/283286.10@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1724 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug