REGRESSION (283076@main): [ Sonoma wk2 x86_64 ] fast/forms/input-implicit-length-limit.html is a constant timeout. https://bugs.webkit.org/show_bug.cgi?id=279375 rdar://135569016

Reviewed by Per Arne Vollan and Darin Adler.

In 283076@main, I replaced a call to memset() with a call to memsetSpan()
for extra safety. However, the size of the span I started passing didn't
actually match the `size` parameter we used to pass to memset().

As a result, we would keep resetting memory even if the buffer size had
not changed, which is common.

This caused fast/forms/input-implicit-length-limit.html to run 4x as slow
and it started to time out.

* Source/WebKit/Platform/IPC/Encoder.cpp:
(IPC::Encoder::grow):

Canonical link: https://commits.webkit.org/283393@main